--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -6,14 +6,15 @@
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:f="http://java.sun.com/jsf/core">
 
-<f:loadBundle basename="resources.application" var="msg"/>
 
 <head>
-    <title><h:outputText value="#{msg.welcomeTitle}" /></title>
+
+<script language= "JavaScript">
+		location.href="http://localhost:8080/empresaweb/empresas.xhtml"
+</script>
 </head>
 
 <body>
-<h3><h:outputText value="#{msg.welcomeHeading}" /></h3>
-<p><h:outputText value="#{msg.welcomeMessage}" /></p>
+	
 </body>
 </html>
